--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   padding: 0 20px;
   background-color: rgb(43, 42, 42);
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgb(156, 156, 156);
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   .item {
