--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -1,5 +1,4 @@
 .wrapper {
-  margin: 15px;
   box-sizing: border-box;
   border: 1px solid rgb(190, 190, 190);
   border-radius: 8px;
@@ -15,6 +14,10 @@
     display: flex;
     justify-content: space-around;
     margin-top: 20px;
+    a {
+      text-decoration: none;
+      color:rgb(226, 226, 226);
+    }
     .button {
       border: 1px solid rgb(180, 180, 180);
       border-radius: 8px;
