--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -5,10 +5,16 @@
   padding: 10px;
   font-size: 14px;
   color:rgb(226, 226, 226);
-  .name {
-    font-size: 16px;
-    font-weight: bold;
-    color: rgb(173, 112, 112);
+  box-shadow: 1px 1px 3px 0px rgb(114, 114, 114);
+  .nameBlock {
+    a {
+      text-decoration: none;
+    }
+    .name {
+      font-size: 16px;
+      font-weight: bold;
+      color: rgb(173, 112, 112);
+    }
   }
   .buttons {
     display: flex;
@@ -19,14 +25,13 @@
       color:rgb(226, 226, 226);
     }
     .button {
-      border: 1px solid rgb(180, 180, 180);
       border-radius: 8px;
       width: 70px;
       height: 22px;
       line-height: 22px;
       text-align: center;
       background-color: rgb(63, 63, 63);
-      box-shadow: 1px 1px 3px 0px rgb(114, 114, 114);
+      box-shadow: 0px 0px 3px 1px rgb(63, 63, 63);
       transition: .2s background-color;
       &:hover {
         cursor: pointer;
