--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -30,7 +30,7 @@
     }
     .content {
       grid-area: content;
-      padding: 15px;
+      padding: 15px 25px 25px 0px;
     }
   }
   &.black {
