fix styles for animation page

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,6 +6,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
   top: 0px;
+  font-family: 'verdana','ms sans serif',Tahoma,"Source Sans Pro", sans-serif;
   box-sizing: border-box;
   .wrapper {
     display: grid;
