--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -8,24 +8,37 @@
     border: 1px solid rgb(153, 153, 153);
     border-radius: 8px;
     padding: 15px;
-    font-size: 14px;
+    font-size: 15px;
     color:rgb(226, 226, 226);
     box-shadow: 1px 1px 3px 0px rgb(82, 82, 82);
     &:not(:first-child) {
       margin-top: 15px;
     }
     .image {
-      width: 150px;
+      width: 130px;
       border-radius: 8px;
     }
-    .info {
+    .infoWrapper {
       padding: 0px 0px 0px 30px;
-      .nameRu {
+      .title {
         font-size: 24px;
         margin-bottom: 10px;
       }
+      .date {
+        color: rgb(255, 255, 255);
+        font-weight: bold;
+      }
+      .line {
+        color: #a0a0a0;
+        .lineInfo {
+          color: rgb(255, 255, 255);
+          font-weight: bold;
+          margin-left: 8px;
+        }
+      }
       > div:not(:first-child) {
         margin-left: 15px;
+        margin-top: 8px;
       }
     }
   }
