--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -20,9 +20,20 @@
     }
     .infoWrapper {
       padding: 0px 0px 0px 30px;
+      display: flex;
+      flex-direction: column;
+
       .title {
         font-size: 24px;
         margin-bottom: 10px;
+        a {
+          text-decoration: none;
+          color: rgb(255, 255, 255);
+          transition: .2s color;
+          &:hover {
+            color: rgb(170, 170, 170);
+          }
+        }
       }
       .date {
         color: rgb(255, 255, 255);
