--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -14,9 +14,17 @@
     &:not(:first-child) {
       margin-top: 15px;
     }
-    .image {
-      width: 130px;
+    .imgLink {
+      transition: .2s box-shadow;
       border-radius: 8px;
+      &:hover {
+        box-shadow: 0px 0px 2px 3px #525252;
+      }
+      .image {
+        width: 130px;
+        border-radius: 8px;
+        display: block;
+      }
     }
     .infoWrapper {
       padding: 0px 0px 0px 30px;
@@ -26,6 +34,7 @@
       .title {
         font-size: 24px;
         margin-bottom: 10px;
+        width: fit-content;
         a {
           text-decoration: none;
           color: rgb(255, 255, 255);
@@ -38,9 +47,11 @@
       .date {
         color: rgb(255, 255, 255);
         font-weight: bold;
+        width: fit-content;
       }
       .line {
         color: #a0a0a0;
+        width: fit-content;
         .lineInfo {
           color: rgb(255, 255, 255);
           font-weight: bold;
