--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -1,5 +1,31 @@
 .wrapper {
   position: relative;
+  .sort {
+    display: flex;
+    flex-direction: row;
+    .button {
+      padding: 8px;
+      background-color: #464646;
+      color: rgb(255, 255, 255);
+      user-select: none;
+      font-size: 14px;
+      &.sortBy {
+        background-color: #464646;
+      }
+      &:not(:first-child) {
+        margin-left: 10px;
+        &:not(.active) {
+          &:hover {
+            cursor: pointer;
+          }
+        }
+      }
+      &.active {
+        background-color: #ef4d6e;
+        pointer-events: none;
+      }
+    }
+  }
   .item {
     display: flex;
     justify-content: flex-start;
