--- a/src/components/AnimationFilters/AnimationFilters.module.scss
+++ b/src/components/AnimationFilters/AnimationFilters.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   margin-top: 20px;
   .dropdown {
+    user-select: none;
     &.closed {
       .dropdownBlock {
         display: none;
