--- a/src/components/AnimationFilters/AnimationFilters.module.scss
+++ b/src/components/AnimationFilters/AnimationFilters.module.scss
@@ -9,8 +9,9 @@
       }
     }
     .button {
+      font-size: 15px;
       border: 1px solid rgb(255, 255, 255);
-      padding: 10px;
+      padding: 8px 0px 8px 20px;
       border-top-right-radius: 5px;
       border-top-left-radius: 5px;
       transition: .2s background-color;
@@ -23,8 +24,10 @@
       left: 0px;
       top: 45px;
       .dropdownButton {
+        font-size: 14px;
         background-color: #464646;
-        padding: 10px;
+        padding: 8px 0px 8px 35px;
+        padding-left: 30px;
         transition: .2s background-color;
         &:not(:last-child) {
           border-bottom: 1px solid grey;
