add active state for dropdown

--- a/src/components/AnimationFilters/AnimationFilters.module.scss
+++ b/src/components/AnimationFilters/AnimationFilters.module.scss
@@ -40,6 +40,10 @@
           cursor: pointer;
           background-color: #686868;
         }
+        &.active {
+          pointer-events: none;
+          background-color: #686868;
+        }
       }
     }
   }
