fixes, add buttons pages, doesnt work

--- a/src/components/AnimationFilters/AnimationFilters.module.scss
+++ b/src/components/AnimationFilters/AnimationFilters.module.scss
@@ -38,11 +38,11 @@
         }
         &:hover {
           cursor: pointer;
-          background-color: #686868;
+          background-color: #ef4d6e;
         }
         &.active {
           pointer-events: none;
-          background-color: #686868;
+          background-color: #ef4d6e;
         }
       }
     }
