--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -28,6 +28,33 @@
       }
     }
   }
+  .pages {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    a {
+      text-decoration: none;
+      color: white;
+      &:active {
+        pointer-events: none;
+      }
+    }
+    .pageButton {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 40px;
+      height: 40px;
+      margin: 0 10px;
+      box-sizing: border-box;
+      background-color: rgb(99, 99, 99);
+      transition: .2s background-color;
+      &:hover {
+        cursor: pointer;
+        background-color: rgb(59, 59, 59);
+      }
+    }
+  }
   .item {
     display: flex;
     justify-content: flex-start;
