--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -9,7 +9,7 @@
       color: rgb(255, 255, 255);
       user-select: none;
       font-size: 14px;
-      transition: .2s background-color;
+      transition: 0.2s background-color;
       &.sortBy {
         background-color: #464646;
       }
@@ -29,18 +29,12 @@
     }
   }
   .pages {
-    display: flex;
-    justify-content: center;
     margin-top: 15px;
-    a {
-      text-decoration: none;
-      color: white;
-      &:active {
-        pointer-events: none;
-      }
-    }
+    width: 100%;
+    text-align: center;
     .pageButton {
-      display: flex;
+      position: relative;
+      display: inline-flex;
       justify-content: center;
       align-items: center;
       width: 40px;
@@ -48,10 +42,18 @@
       margin: 0 10px;
       box-sizing: border-box;
       background-color: rgb(99, 99, 99);
-      transition: .2s background-color;
+      transition: 0.2s background-color;
       &:hover {
         cursor: pointer;
         background-color: rgb(59, 59, 59);
+      }
+      .link {
+        text-decoration: none;
+        color: white;
+        pointer-events: all;
+        &:active {
+          pointer-events: none;
+        }
       }
     }
   }
@@ -64,13 +66,13 @@
     border-radius: 8px;
     padding: 15px;
     font-size: 15px;
-    color:rgb(226, 226, 226);
+    color: rgb(226, 226, 226);
     box-shadow: 1px 1px 3px 0px rgb(82, 82, 82);
     &:not(:first-child) {
       margin-top: 15px;
     }
     .imgLink {
-      transition: .2s box-shadow;
+      transition: 0.2s box-shadow;
       border-radius: 8px;
       &:hover {
         box-shadow: 0px 0px 2px 3px #525252;
@@ -93,7 +95,7 @@
         a {
           text-decoration: none;
           color: rgb(255, 255, 255);
-          transition: .2s color;
+          transition: 0.2s color;
           &:hover {
             color: rgb(170, 170, 170);
           }
