--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -32,14 +32,15 @@
     margin-top: 15px;
     width: 100%;
     text-align: center;
+    font-size: 13px;
     .pageButton {
       position: relative;
       display: inline-flex;
       justify-content: center;
       align-items: center;
-      width: 40px;
-      height: 40px;
-      margin: 0 10px;
+      width: 30px;
+      height: 30px;
+      margin: 0 3px;
       box-sizing: border-box;
       background-color: rgb(99, 99, 99);
       transition: 0.2s background-color;
@@ -47,14 +48,16 @@
         cursor: pointer;
         background-color: rgb(59, 59, 59);
       }
-      .link {
-        text-decoration: none;
-        color: white;
-        pointer-events: all;
-        &:active {
-          pointer-events: none;
-        }
+      text-decoration: none;
+      color: white;
+      &.active {
+        background-color: #ef4d6e;
+        pointer-events: none;
       }
+    }
+    .pagesCounter {
+      margin-left: 10px;
+      display: inline-block;
     }
   }
   .item {
