refactoring, 80% filter done

--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -33,6 +33,7 @@
     width: 100%;
     text-align: center;
     font-size: 13px;
+    user-select: none;
     .pageButton {
       position: relative;
       display: inline-flex;
