--- a/src/components/AnimationFilters/AnimationFilters.module.scss
+++ b/src/components/AnimationFilters/AnimationFilters.module.scss
@@ -1,50 +1,65 @@
 .wrapper {
   position: relative;
   margin-top: 20px;
-  .dropdown {
-    user-select: none;
-    &.closed {
-      .dropdownBlock {
-        display: none;
-      }
+  .title {
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+  .dropdownsWrap {
+     .dropdown:not(:first-child) {
+      margin-top: 15px;
     }
-    .button {
-      font-size: 15px;
-      border: 1px solid rgb(255, 255, 255);
-      padding: 8px 0px 8px 20px;
-      border-top-right-radius: 5px;
-      border-top-left-radius: 5px;
-      transition: .2s background-color;
-      &:hover {
-        cursor: pointer;
-        background-color: #292929;
+    .dropdown {
+      user-select: none;
+      &.closed {
+        .dropdownBlock {
+          display: none;
+        }
       }
-    }
-    .dropdownBlock {
-      left: 0px;
-      top: 45px;
-      .dropdownButton {
-        font-size: 14px;
-        background-color: #464646;
-        padding: 8px 0px 8px 35px;
-        padding-left: 30px;
+      .button {
+        position: relative;
+        font-size: 15px;
+        border: 1px solid rgb(255, 255, 255);
+        padding: 8px 0px 8px 20px;
         transition: .2s background-color;
-        &:not(:last-child) {
-          border-bottom: 1px solid grey;
-        }
-        &:last-child {
-          border-bottom-right-radius: 5px;
-          border-bottom-left-radius: 5px;
-        }
         &:hover {
           cursor: pointer;
-          background-color: #ef4d6e;
+          background-color: #292929;
         }
-        &.active {
-          pointer-events: none;
-          background-color: #ef4d6e;
+        div {
+          display: inline-block;
+          position: absolute;
+          right: 10px;
+          top: 7px;
+        }
+      }
+      .dropdownBlock {
+        left: 0px;
+        top: 45px;
+        .dropdownButton {
+          font-size: 14px;
+          background-color: #464646;
+          padding: 8px 0px 8px 35px;
+          padding-left: 30px;
+          transition: .2s background-color;
+          &:not(:last-child) {
+            border-bottom: 1px solid grey;
+          }
+          &:last-child {
+            border-bottom-right-radius: 5px;
+            border-bottom-left-radius: 5px;
+          }
+          &:hover {
+            cursor: pointer;
+            background-color: #686868;
+          }
+          &.active {
+            pointer-events: none;
+            background-color: #ef4d6e;
+          }
         }
       }
     }
   }
+
 }
