--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
   border-bottom: 1px solid rgb(156, 156, 156);
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
+  user-select: none;
   .item {
     display: inline-block;
     line-height: 40px;
