--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -16,7 +16,7 @@
       'header header'
       'menu content';
     margin: 0 auto;
-    width: 1200px;
+    max-width: 1311px;
     height: 100%;
     color: white;
     border-radius: 8px;
@@ -32,6 +32,9 @@
     .content {
       grid-area: content;
       padding: 15px 25px 25px 0px;
+      min-height: 840px;
+      min-width: 750px;
+      max-width: 1066px;
     }
   }
   &.black {
