--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -11,7 +11,7 @@
   .wrapper {
     display: grid;
     grid-template-columns: 220px auto;
-    grid-template-rows: auto;
+    grid-template-rows: 50px auto;
     grid-template-areas: 
       'header header'
       'menu content';
@@ -24,6 +24,7 @@
     box-sizing: border-box;
     .header {
       grid-area: header;
+      height: 50px;
     }
     .menu {
       grid-area: menu;
