--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -4,27 +4,38 @@
     display: flex;
     flex-direction: row;
     .button {
+      display: flex;
+      flex-direction: row;
       padding: 8px;
       background-color: #464646;
       color: rgb(255, 255, 255);
       user-select: none;
       font-size: 13px;
       transition: 0.2s background-color;
+      .text {
+        
+      }
+      .arrow {
+        width: 16px;
+        height: 16px;
+      }
       &.sortBy {
         background-color: #464646;
       }
       &:not(:first-child) {
         margin-left: 10px;
-        &:not(.active) {
           &:hover {
             background-color: #ef4d6e;
             cursor: pointer;
           }
-        }
       }
       &.active {
         background-color: #ef4d6e;
-        pointer-events: none;
+      }
+      .arrow {
+        &.reverse {
+          transform: rotate(180deg);
+        }
       }
     }
   }
