--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -7,8 +7,13 @@
     flex-direction: row;
     background-color: rgb(68, 68, 68);
     border-radius: 10px;
+    box-sizing: border-box;
+    border: 1px solid rgb(68, 68, 68);
+    &:focus-within {
+      border: 1px solid #af4d4d;
+    }
     input {
-      padding: 11px 0 11px 20px;
+      padding: 10px 0 10px 20px;
       font-size: 13px;
       border: 0px solid black;
       background-color: transparent;
@@ -30,6 +35,9 @@
       }
       &:hover {
         cursor: pointer;
+      }
+      &:not(.active) {
+        pointer-events: none;
       }
     }
   }
