--- a/src/components/PageView/PageView.module.scss
+++ b/src/components/PageView/PageView.module.scss
@@ -13,10 +13,14 @@
     display: flex;
     justify-content: space-between;
     .pageViewItem {
+      transition: 0.2s background-color;
       background-color: #464646;
     }
-    &:not(.active) {
+    &:hover {
       cursor: pointer;
+      .pageViewItem {
+        background-color: rgb(61, 61, 61);
+      }
     }
     &.active {
       pointer-events: none;
@@ -35,6 +39,13 @@
       }
     }
     &.medium {
+      flex-direction: column;
+      .pageViewItem {
+        width: 100%;
+        height: 13px;
+      }
+    }
+    &.large {
       flex-direction: row;
       flex-wrap: wrap;
       .pageViewItem {
@@ -43,13 +54,6 @@
         &:nth-child(n + 3) {
           margin-top: 3px;
         }
-      }
-    }
-    &.large {
-      flex-direction: column;
-      .pageViewItem {
-        width: 100%;
-        height: 13px;
       }
     }
   }
