--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -130,6 +130,7 @@
       flex-direction: row;
       flex-wrap: wrap;
       .item {
+        transition: .1s width, .1s height;
         margin-left: 25px;
         margin-top: 25px;
         width: 325px;
@@ -141,6 +142,7 @@
           text-decoration: none;
           color: white;
           .image {
+            transition: .1s max-width, .1s max-height;
             max-width: 270px;
             max-height: 395px;
           }
