--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -1,37 +1,43 @@
 .wrapper {
   position: relative;
-  .sort {
+  .listOwnerBlock {
+    position: absolute;
+    left: 14px;
+    top: 52px;
     display: flex;
     flex-direction: row;
-    .button {
+    .titleListOwner {
       display: flex;
-      flex-direction: row;
-      padding: 8px;
+      align-items: center;
+      margin-right: 10px;
+      font-size: 18px;
+    }
+    .userBittonClose {
       background-color: #464646;
-      color: rgb(255, 255, 255);
-      user-select: none;
-      font-size: 13px;
-      transition: 0.2s background-color;
-      .arrow {
-        width: 16px;
-        height: 16px;
-      }
-      &.sortBy {
-        background-color: #464646;
-      }
-      &:not(:first-child) {
-        margin-left: 10px;
+      padding: 7px 10px 7px 15px;
+      margin-right: 10px;
+      border-radius: 7px;
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+      .name {
+        transition: .2s color;
+        color: #dadada;
+        text-decoration: none;
         &:hover {
-          background-color: #ef4d6e;
+          color:#8f8f8f;
           cursor: pointer;
         }
       }
-      &.active {
-        background-color: #ef4d6e;
-      }
-      .arrow {
-        &.reverse {
-          transform: rotate(180deg);
+      .cancelButton {
+        width: 17px;
+        height: 17px;
+        margin-left: 10px;
+        transition: .2s fill;
+        fill: #dadada;
+        &:hover {
+          cursor: pointer;
+          fill:#8f8f8f;
         }
       }
     }
@@ -46,9 +52,9 @@
       &:not(:first-child) {
         margin-top: 15px;
       }
-      transition: .2s background-color;
+      transition: 0.2s background-color;
       &:hover {
-       background-color: #2c2c2c;   
+        background-color: #2c2c2c;
       }
       .itemInner {
         display: flex;
@@ -124,13 +130,12 @@
           }
         }
       }
-
     }
     &.large {
       flex-direction: row;
       flex-wrap: wrap;
       .item {
-        transition: .1s width, .1s height;
+        transition: 0.1s width, 0.1s height;
         margin-left: 25px;
         margin-top: 25px;
         width: 325px;
@@ -142,7 +147,7 @@
           text-decoration: none;
           color: white;
           .image {
-            transition: .1s max-width, .1s max-height;
+            transition: 0.1s max-width, 0.1s max-height;
             max-width: 270px;
             max-height: 395px;
           }
