--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -1,13 +1,13 @@
 .wrapper {
   box-sizing: border-box;
-  border: 1px solid rgb(190, 190, 190);
-  border-radius: 8px;
-  padding: 10px;
+  border-radius: 4px;
   font-size: 14px;
-  color:rgb(226, 226, 226);
-  box-shadow: 1px 1px 3px 0px rgb(114, 114, 114);
+  color: #e2e2e2;
+  background-color: #2b2b2b;
   .nameBlock {
+    padding: 10px 10px 0 10px;
     a {
+      margin-left: 10px;
       text-decoration: none;
     }
     .name {
@@ -16,26 +16,37 @@
       color: rgb(173, 112, 112);
     }
   }
+  .title {
+    padding-left: 10px;
+    border-top: 1px solid #404040;
+    margin-top: 5px;
+    padding-top: 5px;
+  }
+  .line {
+    display: flex;
+    justify-content: space-between;
+    width: 65%;
+    padding-left: 20px;
+  }
   .buttons {
     display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
+    justify-content: space-between;
+    padding: 15px 10px 10px 10px;
     a {
       text-decoration: none;
       color:rgb(226, 226, 226);
     }
     .button {
-      border-radius: 8px;
-      width: 70px;
+      border-radius: 4px;
+      width: 80px;
       height: 22px;
       line-height: 22px;
       text-align: center;
       background-color: rgb(63, 63, 63);
-      box-shadow: 0px 0px 3px 1px rgb(63, 63, 63);
       transition: .2s background-color;
       &:hover {
         cursor: pointer;
-        background-color: rgb(104, 104, 104);
+        background-color: rgb(78, 78, 78);
       }
     }
   }
