--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -50,8 +50,34 @@
         background-color: #313131;
       }
     }
+    .loading {
+      height: 100px;
+      width: 100%;
+      font-size: 18px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        width: 40px;
+        height: 40px;
+        animation-name: rotation;
+        animation-duration: 1.5s;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
+      }
+    }
   }
 }
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media (max-width: 1325px) {
   .wrapper {
     .animationWrap {
