--- a/src/components/Registration/Registration.module.scss
+++ b/src/components/Registration/Registration.module.scss
@@ -1,38 +1,26 @@
 .wrapper {
+  position: relative;
   .registrationBlock {
-    position: relative;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
-    form {
-      display: inline-flex;
-      flex-direction: column;
-      padding: 15px;
-      width: 250px;
-      input:not(:first-child) {
-        margin-top: 10px;
+    .line {
+      position: relative;
+      margin-top: 8px;
+      input {
+        width: 210px;
       }
-      .buttons {
-        display: flex;
-        justify-content: flex-end;
-        padding: 15px 0px 0px 0px;
+      .error {
+        position: absolute;
+        left: 225px;
+        top: 5px;
         font-size: 11px;
-        a {
-          text-decoration: none;
-          color: rgb(226, 226, 226);
-        }
-        .button {
-          border-radius: 4px;
-          padding: 0px 15px;
-          height: 22px;
-          line-height: 22px;
-          text-align: center;
-          background-color: rgb(63, 63, 63);
-          transition: 0.2s background-color;
-          &:hover {
-            cursor: pointer;
-            background-color: rgb(78, 78, 78);
-          }
-        }
+        color: red;
+        width: max-content;
+      }
+      &.button {
+        display: flex;
+        justify-content: space-between;
       }
     }
   }
