--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -8,37 +8,51 @@
     position: relative;
     display: flex;
     justify-content: center;
-    form {
-      display: inline-flex;
-      flex-direction: column;
-      padding: 15px;
-      width: 85%;
-      input:not(:first-child) {
+    display: inline-flex;
+    flex-direction: column;
+    padding: 15px;
+    width: 85%;
+    .input {
+      &:not(:first-of-type) {
         margin-top: 10px;
       }
-      .buttons {
-        display: flex;
-        justify-content: space-between;
-        padding: 15px 0px 0px 0px;
+      input {
+        width: 100%;
+        box-sizing: border-box;
+      }
+    }
+    .buttons {
+      display: flex;
+      justify-content: space-between;
+      padding: 15px 0px 0px 0px;
+      a {
+        text-decoration: none;
+        color: rgb(226, 226, 226);
+      }
+      .button {
+        border-radius: 4px;
+        width: 75px;
+        height: 22px;
+        line-height: 22px;
+        text-align: center;
+        border: 0px solid;
+        color: white;
         font-size: 11px;
-        a {
-          text-decoration: none;
-          color: rgb(226, 226, 226);
+        background-color: rgb(63, 63, 63);
+        transition: 0.2s background-color;
+        &:hover {
+          cursor: pointer;
+          background-color: rgb(78, 78, 78);
         }
-        .button {
-          border-radius: 4px;
-          width: 75px;
-          height: 22px;
-          line-height: 22px;
-          text-align: center;
-          background-color: rgb(63, 63, 63);
-          transition: 0.2s background-color;
-          &:hover {
-            cursor: pointer;
-            background-color: rgb(78, 78, 78);
-          }
+        &:focus {
+          outline: none;
         }
       }
+    }
+    .wrongAuth {
+      color: red;
+      margin-top: 10px;
+      font-size: 12px;
     }
   }
   .wrapperInfoUser {
