--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -12,41 +12,43 @@
     margin: 10px 0px 10px 10px;
   }
   .animationWrap {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     width: 100%;
-    .animationItem {
-      border: 1px solid transparent;
-      border-radius: 4px;
-      width: 14.5%;
-      transition: .2s border, .1s width, .1s height;
-      &:hover {
-        border: 1px solid #888888;
-      }
-      &:not(:first-child) {
-        margin-left: 15px;
-      }
-      .image {
-        width: 100%;
-        height: 100%;
-        border-radius: 4px;
-      }
-    }
-    .restAnimation {
-      background-color: #272727;
+    .animationListWrap {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      border-radius: 4px;
-      width: 14.5%;
-      margin-left: 15px;
-      color: #969696;
-      text-decoration: none;
-      transition: .2s background-color, .1s width, .1s height;
-      &:hover {
-        background-color: #313131;
+      flex-direction: row;
+      flex-wrap: wrap;
+      .animationItem {
+        border: 1px solid transparent;
+        border-radius: 4px;
+        width: 14.5%;
+        transition: .2s border, .1s width, .1s height;
+        &:hover {
+          border: 1px solid #888888;
+        }
+        &:not(:first-child) {
+          margin-left: 15px;
+        }
+        .image {
+          width: 100%;
+          height: 100%;
+          border-radius: 4px;
+        }
+      }
+      .restAnimation {
+        background-color: #272727;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        border-radius: 4px;
+        width: 14.5%;
+        margin-left: 15px;
+        color: #969696;
+        text-decoration: none;
+        transition: .2s background-color, .1s width, .1s height;
+        &:hover {
+          background-color: #313131;
+        }
       }
     }
     .loading {
