--- a/src/components/AnimationFilters/AnimationFilters.module.scss
+++ b/src/components/AnimationFilters/AnimationFilters.module.scss
@@ -1,13 +1,19 @@
 .wrapper {
-  position: relative;
-  margin-top: 20px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #e2e2e2;
+  background-color: #2b2b2b;
+  margin-top: 15px;
+  padding: 15px;
   .title {
     font-size: 14px;
     margin-bottom: 10px;
+    margin-left: 5px;
   }
   .dropdownsWrap {
      .dropdown:not(:first-child) {
-      margin-top: 15px;
+      margin-top: 10px;
     }
     .dropdown {
       &.closed {
@@ -18,12 +24,12 @@
       .button {
         position: relative;
         font-size: 15px;
-        border: 1px solid rgb(255, 255, 255);
+        background-color: #333333;
         padding: 8px 0px 8px 20px;
         transition: .2s background-color;
         &:hover {
           cursor: pointer;
-          background-color: #292929;
+          background-color: #3f3f3f;
         }
         div {
           display: inline-block;
@@ -39,19 +45,15 @@
         .dropdownButton {
           display: flex;
           flex-direction: column;
-          font-size: 14px;
-          background-color: #464646;
+          font-size: 13px;
+          background-color: #3a3a3a;
           transition: .2s background-color;
           &:not(:last-child) {
-            border-bottom: 1px solid grey;
-          }
-          &:last-child {
-            border-bottom-right-radius: 5px;
-            border-bottom-left-radius: 5px;
+            border-bottom: 1px solid #505050;
           }
           &:hover {
             cursor: pointer;
-            background-color: #686868;
+            background-color: #4b4b4b;
           }
           &.active {
             pointer-events: none;
@@ -61,7 +63,7 @@
             text-decoration: none;
             color: white;
             padding: 8px 0px 8px 35px;
-            padding-left: 30px;
+            padding-left: 20px;
           }
         }
       }
