--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -13,6 +13,8 @@
   }
   .animationWrap {
     width: 100%;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #2f2f2f;
     .animationListWrap {
       display: flex;
       flex-direction: row;
@@ -66,6 +68,9 @@
         animation-iteration-count: infinite;
         animation-timing-function: ease-in-out;
       }
+    }
+    .noItems {
+      margin-left: 30px;
     }
   }
 }
