--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -83,22 +83,34 @@
     .buttons {
       display: flex;
       justify-content: space-between;
-      padding: 15px 10px 10px 10px;
+      margin-top: 15px;
+      border-top: 1px solid #444343;
+      :nth-child(1) {
+        border-bottom-left-radius: 4px;
+      }
+      :nth-child(2) {
+        border-bottom-right-radius: 4px;
+        width: 50%;
+        border-left: 1px solid #444343;
+      }
       a {
         text-decoration: none;
         color: rgb(226, 226, 226);
+        width: 50%;
       }
       .button {
-        border-radius: 4px;
-        width: 80px;
-        height: 22px;
-        line-height: 22px;
-        text-align: center;
-        background-color: rgb(63, 63, 63);
+        height: 32px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         transition: 0.2s background-color;
         &:hover {
           cursor: pointer;
-          background-color: rgb(78, 78, 78);
+          background-color: rgb(58, 58, 58);
+        }
+        img {
+          height: 22px;
+          width: 22px;
         }
       }
     }
