--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -8,44 +8,61 @@
     position: relative;
     display: flex;
     justify-content: center;
-    display: inline-flex;
     flex-direction: column;
-    padding: 15px;
-    width: 85%;
-    .input {
-      &:not(:first-of-type) {
+    width: 100%;
+    border-radius: 4px;
+    form {
+      width: 100%;
+      border-radius: 4px;
+      .input {
+        margin-left: 10px;
         margin-top: 10px;
-      }
-      input {
-        width: 100%;
-        box-sizing: border-box;
-      }
-    }
-    .buttons {
-      display: flex;
-      justify-content: space-between;
-      padding: 15px 0px 0px 0px;
-      a {
-        text-decoration: none;
-        color: rgb(226, 226, 226);
-      }
-      .button {
-        border-radius: 4px;
-        width: 75px;
-        height: 22px;
-        line-height: 22px;
-        text-align: center;
-        border: 0px solid;
-        color: white;
-        font-size: 11px;
-        background-color: rgb(63, 63, 63);
-        transition: 0.2s background-color;
-        &:hover {
-          cursor: pointer;
-          background-color: rgb(78, 78, 78);
+        &:not(:first-of-type) {
+          margin-top: 10px;
         }
-        &:focus {
-          outline: none;
+        input {
+          width: 169px;
+          box-sizing: border-box;
+        }
+      }
+      .buttons {
+        button {
+          border: none;
+          width: 50%;
+          border-bottom-left-radius: 4px;
+        }
+        display: flex;
+        justify-content: space-between;
+        margin-top: 15px;
+        border-top: 1px solid #444343;
+        a {
+          text-decoration: none;
+          width: 50%;
+          color: rgb(226, 226, 226);
+          border-bottom-right-radius: 4px;
+          border-left: 1px solid #444343;
+          .button {
+            border-bottom-right-radius: 4px;
+          }
+        }
+        .button {
+          height: 45px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: #2b2b2b;
+          transition: 0.2s background-color;
+          &:hover {
+            cursor: pointer;
+            background-color: rgb(58, 58, 58);
+          }
+          &:focus {
+            outline: none;
+          }
+          img {
+            height: 30px;
+            width: 30px;
+          }
         }
       }
     }
