--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -23,6 +23,21 @@
         input {
           width: 169px;
           box-sizing: border-box;
+          border: 0px solid black;
+          color: white;
+          background-color: #464646;
+          padding: 5px;
+          transition: 0.1s background-color;
+          &:focus {
+            outline: none;
+            background-color: #535353;
+          }
+          &:-internal-autofill-selected {
+            appearance: menulist-button;
+            background-color: #464646 !important;
+            background-image: none !important;
+            color: white !important;
+          }
         }
       }
       .buttons {
@@ -33,7 +48,7 @@
         }
         display: flex;
         justify-content: space-between;
-        margin-top: 15px;
+        margin-top: 10px;
         border-top: 1px solid #444343;
         a {
           text-decoration: none;
@@ -46,6 +61,8 @@
           }
         }
         .button {
+          position: relative;
+          overflow: hidden;
           height: 45px;
           display: flex;
           justify-content: center;
@@ -55,6 +72,9 @@
           &:hover {
             cursor: pointer;
             background-color: rgb(58, 58, 58);
+            .text {
+              transform: translateY(0px);
+            }
           }
           &:focus {
             outline: none;
@@ -63,12 +83,33 @@
             height: 30px;
             width: 30px;
           }
+          .text {
+            position: absolute;
+            color: white;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            font-size: 12px;
+            background-color: rgb(58, 58, 58);
+            opacity: 0.85;
+            transition: 0.2s transform;
+            transform: translateY(100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
         }
       }
     }
     .wrongAuth {
-      color: red;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 20px;
+      color: #ce3333;
       margin-top: 10px;
+      margin-bottom: 10px;
       font-size: 12px;
     }
   }
@@ -102,21 +143,22 @@
       justify-content: space-between;
       margin-top: 15px;
       border-top: 1px solid #444343;
-      :nth-child(1) {
-        border-bottom-left-radius: 4px;
-      }
-      :nth-child(2) {
-        border-bottom-right-radius: 4px;
-        width: 50%;
-        border-left: 1px solid #444343;
-      }
       a {
         text-decoration: none;
         color: rgb(226, 226, 226);
         width: 50%;
+        overflow: hidden;
+        border-bottom-left-radius: 4px;
+      }
+      > div {
+        border-bottom-right-radius: 4px;
+        width: 50%;
+        border-left: 1px solid #444343;
       }
       .button {
+        position: relative;
         height: 32px;
+        overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -124,10 +166,28 @@
         &:hover {
           cursor: pointer;
           background-color: rgb(58, 58, 58);
+          .text {
+            transform: translateY(0px);
+          }
         }
         img {
           height: 22px;
           width: 22px;
+        }
+        .text {
+          position: absolute;
+          left: 0px;
+          top: 0px;
+          width: 100%;
+          height: 100%;
+          font-size: 12px;
+          background-color: rgb(58, 58, 58);
+          opacity: 0.85;
+          transition: 0.2s transform;
+          transform: translateY(100%);
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
       }
     }
