--- a/src/components/AnimationFilters/AnimationFilters.module.scss
+++ b/src/components/AnimationFilters/AnimationFilters.module.scss
@@ -6,15 +6,45 @@
   background-color: #2b2b2b;
   margin-top: 15px;
   padding: 15px;
+
   .title {
     font-size: 14px;
     margin-bottom: 10px;
     margin-left: 5px;
   }
+
+  .currentFilters {
+    margin-bottom: 10px;
+    .listOwnerBlock {
+      background-color: #464646;
+      padding: 7px 10px 7px 15px;
+      border-radius: 4px;
+      font-size: 16px;
+      .name {
+        transition: .2s color;
+        color: #dadada;
+        text-decoration: none;
+        &:hover {
+          color: #8f8f8f;
+          cursor: pointer;
+        }
+      }
+      .cancelButton {
+        width: 17px;
+        height: 17px;
+        float: right;
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
   .dropdownsWrap {
-     .dropdown:not(:first-child) {
+    .dropdown:not(:first-child) {
       margin-top: 10px;
     }
+
     .dropdown {
       .button {
         position: relative;
@@ -22,10 +52,12 @@
         background-color: #333333;
         padding: 8px 0px 8px 20px;
         transition: .2s background-color;
+
         &:hover {
           cursor: pointer;
           background-color: #3f3f3f;
         }
+
         div {
           display: inline-block;
           position: absolute;
@@ -33,12 +65,14 @@
           top: 7px;
         }
       }
+
       .dropdownBlock {
         left: 0px;
         top: 0px;
         position: relative;
         transition: .3s height;
         overflow: hidden;
+
         .dropdownButton {
           display: flex;
           align-items: center;
@@ -46,17 +80,21 @@
           font-size: 13px;
           background-color: #3a3a3a;
           transition: .2s background-color;
+
           &:not(:last-child) {
             border-bottom: 1px solid #505050;
           }
+
           &:hover {
             cursor: pointer;
             background-color: #4b4b4b;
           }
+
           &.active {
             pointer-events: none;
             background-color: #ef4d6e;
           }
+
           a {
             text-decoration: none;
             color: white;
